src/generated/org/langera/freudgenerated/css/parser/CssParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /home/langera/dev/freud/src/grammar/Css.g 2010-07-23 21:37:09

package org.langera.freudgenerated.css.parser;


import org.antlr.runtime.*;
import org.antlr.runtime.tree.*;

/**
 * Simplified version of grammar CSS grammar - http://www.antlr.org/grammar/1214945003224/csst3.g
 */
public class CssParser extends Parser
{
    public static final String[] tokenNames = new String[]{
            "<invalid>", "<EOR>", "<DOWN>", "<UP>", "IMPORT", "NESTED", "NEST", "RULE", "ATTRIB", "CHILD", "ADJACENT_SIBLING", "ATTRIBEQUAL", "HASVALUE", "BEGINSWITH", "PSEUDO", "PROPERTY", "COLOUR", "FUNCTION", "TAG", "ID", "CLASS", "UNIVERSAL", "IDENT", "SL_COMMENT", "COMMENT", "WS", "'@import'", "'@include'", "'@'", "'{'", "'}'", "','", "'>'", "'+'", "';'", "'*'", "'#'", "'.'", "':'", "'::'", "'['", "']'", "'='", "'~='", "'|='", "'%'", "'px'", "'cm'", "'mm'", "'in'", "'pt'", "'pc'", "'em'", "'ex'", "'deg'", "'rad'", "'grad'", "'ms'", "'s'", "'hz'", "'khz'", "'('", "')'"
    };
    public static final int FUNCTION = 17;
    public static final int CLASS = 20;
    public static final int ATTRIB = 8;
    public static final int T__29 = 29;
    public static final int T__28 = 28;
    public static final int T__27 = 27;
    public static final int T__62 = 62;
    public static final int T__26 = 26;
    public static final int HASVALUE = 12;
    public static final int PSEUDO = 14;
    public static final int NEST = 6;
    public static final int ID = 19;
    public static final int T__61 = 61;
    public static final int ATTRIBEQUAL = 11;
    public static final int EOF = -1;
    public static final int T__60 = 60;
    public static final int T__55 = 55;
    public static final int T__56 = 56;
    public static final int T__57 = 57;
    public static final int T__58 = 58;
    public static final int IMPORT = 4;
    public static final int T__51 = 51;
    public static final int T__52 = 52;
    public static final int T__53 = 53;
    public static final int T__54 = 54;
    public static final int ADJACENT_SIBLING = 10;
    public static final int T__59 = 59;
    public static final int IDENT = 22;
    public static final int COLOUR = 16;
    public static final int COMMENT = 24;
    public static final int T__50 = 50;
    public static final int CHILD = 9;
    public static final int T__42 = 42;
    public static final int T__43 = 43;
    public static final int T__40 = 40;
    public static final int T__41 = 41;
    public static final int T__46 = 46;
    public static final int T__47 = 47;
    public static final int RULE = 7;
    public static final int T__44 = 44;
    public static final int BEGINSWITH = 13;
    public static final int T__45 = 45;
    public static final int T__48 = 48;
    public static final int T__49 = 49;
    public static final int TAG = 18;
    public static final int NESTED = 5;
    public static final int T__30 = 30;
    public static final int T__31 = 31;
    public static final int T__32 = 32;
    public static final int WS = 25;
    public static final int T__33 = 33;
    public static final int T__34 = 34;
    public static final int T__35 = 35;
    public static final int T__36 = 36;
    public static final int PROPERTY = 15;
    public static final int T__37 = 37;
    public static final int T__38 = 38;
    public static final int T__39 = 39;
    public static final int SL_COMMENT = 23;
    public static final int UNIVERSAL = 21;

    // delegates
    // delegators


    public CssParser(TokenStream input)
    {
        this(input, new RecognizerSharedState());
    }

    public CssParser(TokenStream input, RecognizerSharedState state)
    {
        super(input, state);

    }

    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor)
    {
        this.adaptor = adaptor;
    }

    public TreeAdaptor getTreeAdaptor()
    {
        return adaptor;
    }

    public String[] getTokenNames() { return CssParser.tokenNames; }

    public String getGrammarFileName() { return "/home/langera/dev/freud/src/grammar/Css.g"; }


    public static class stylesheet_return extends ParserRuleReturnScope
    {
        CommonTree tree;

        public Object getTree() { return tree; }
    }

    ;

    // $ANTLR start "stylesheet"
    // /home/langera/dev/freud/src/grammar/Css.g:40:1: stylesheet : ( importRule )* ( nested | ruleset )+ ;

    public final CssParser.stylesheet_return stylesheet() throws RecognitionException
    {
        CssParser.stylesheet_return retval = new CssParser.stylesheet_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        CssParser.importRule_return importRule1 = null;

        CssParser.nested_return nested2 = null;

        CssParser.ruleset_return ruleset3 = null;


        try
        {
            // /home/langera/dev/freud/src/grammar/Css.g:41:2: ( ( importRule )* ( nested | ruleset )+ )
            // /home/langera/dev/freud/src/grammar/Css.g:41:4: ( importRule )* ( nested | ruleset )+
            {
                root_0 = (CommonTree) adaptor.nil();

                // /home/langera/dev/freud/src/grammar/Css.g:41:4: ( importRule )*
                loop1:
                do
                {
                    int alt1 = 2;
                    int LA1_0 = input.LA(1);

                    if (((LA1_0 >= 26 && LA1_0 <= 27)))
                    {
                        alt1 = 1;
                    }


                    switch (alt1)
                    {
                        case 1:
                            // /home/langera/dev/freud/src/grammar/Css.g:41:4: importRule
                        {
                            pushFollow(FOLLOW_importRule_in_stylesheet131);
                            importRule1 = importRule();

                            state._fsp--;

                            adaptor.addChild(root_0, importRule1.getTree());

                        }
                        break;

                        default:
                            break loop1;
                    }
                }
                while (true);

                // /home/langera/dev/freud/src/grammar/Css.g:41:16: ( nested | ruleset )+
                int cnt2 = 0;
                loop2:
                do
                {
                    int alt2 = 3;
                    int LA2_0 = input.LA(1);

                    if ((LA2_0 == 28))
                    {
                        alt2 = 1;
                    }
                    else if ((LA2_0 == IDENT || (LA2_0 >= 35 && LA2_0 <= 37)))
                    {
                        alt2 = 2;
                    }


                    switch (alt2)
                    {
                        case 1:
                            // /home/langera/dev/freud/src/grammar/Css.g:41:17: nested
                        {
                            pushFollow(FOLLOW_nested_in_stylesheet135);
                            nested2 = nested();

                            state._fsp--;

                            adaptor.addChild(root_0, nested2.getTree());

                        }
                        break;
                        case 2:
                            // /home/langera/dev/freud/src/grammar/Css.g:41:26: ruleset
                        {
                            pushFollow(FOLLOW_ruleset_in_stylesheet139);
                            ruleset3 = ruleset();

                            state._fsp--;

                            adaptor.addChild(root_0, ruleset3.getTree());

                        }
                        break;

                        default:
                            if (cnt2 >= 1)
                            {
                                break loop2;
                            }
                            EarlyExitException eee =
                                    new EarlyExitException(2, input);
                            throw eee;
                    }
                    cnt2++;
                }
                while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree) adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re)
        {
            reportError(re);
            recover(input, re);
            retval.tree = (CommonTree) adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally
        {
        }
        return retval;
    }
    // $ANTLR end "stylesheet"

    public static class importRule_return extends ParserRuleReturnScope
    {
        CommonTree tree;

        public Object getTree() { return tree; }
    }

    ;

    // $ANTLR start "importRule"
    // /home/langera/dev/freud/src/grammar/Css.g:44:1: importRule : ( '@import' | '@include' ) IDENT -> ^( IMPORT IDENT ) ;

    public final CssParser.importRule_return importRule() throws RecognitionException
    {
        CssParser.importRule_return retval = new CssParser.importRule_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token string_literal4 = null;
        Token string_literal5 = null;
        Token IDENT6 = null;

        CommonTree string_literal4_tree = null;
        CommonTree string_literal5_tree = null;
        CommonTree IDENT6_tree = null;
        RewriteRuleTokenStream stream_IDENT = new RewriteRuleTokenStream(adaptor, "token IDENT");
        RewriteRuleTokenStream stream_26 = new RewriteRuleTokenStream(adaptor, "token 26");
        RewriteRuleTokenStream stream_27 = new RewriteRuleTokenStream(adaptor, "token 27");

        try
        {
            // /home/langera/dev/freud/src/grammar/Css.g:45:2: ( ( '@import' | '@include' ) IDENT -> ^( IMPORT IDENT ) )
            // /home/langera/dev/freud/src/grammar/Css.g:45:4: ( '@import' | '@include' ) IDENT
            {
                // /home/langera/dev/freud/src/grammar/Css.g:45:4: ( '@import' | '@include' )
                int alt3 = 2;
                int LA3_0 = input.LA(1);

                if ((LA3_0 == 26))
                {
                    alt3 = 1;
                }
                else if ((LA3_0 == 27))
                {
                    alt3 = 2;
                }
                else
                {
                    NoViableAltException nvae =
                            new NoViableAltException("", 3, 0, input);

                    throw nvae;
                }
                switch (alt3)
                {
                    case 1:
                        // /home/langera/dev/freud/src/grammar/Css.g:45:5: '@import'
                    {
                        string_literal4 = (Token) match(input, 26, FOLLOW_26_in_importRule153);
                        stream_26.add(string_literal4);


                    }
                    break;
                    case 2:
                        // /home/langera/dev/freud/src/grammar/Css.g:45:17: '@include'
                    {
                        string_literal5 = (Token) match(input, 27, FOLLOW_27_in_importRule157);
                        stream_27.add(string_literal5);


                    }
                    break;

                }

                IDENT6 = (Token) match(input, IDENT, FOLLOW_IDENT_in_importRule161);
                stream_IDENT.add(IDENT6);


                // AST REWRITE
                // elements: IDENT
                // token labels:
                // rule labels: retval
                // token list labels:
                // rule list labels:
                // wildcard labels:
                retval.tree = root_0;
                RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval != null ? retval.tree : null);

                root_0 = (CommonTree) adaptor.nil();
                // 45:36: -> ^( IMPORT IDENT )
                {
                    // /home/langera/dev/freud/src/grammar/Css.g:45:39: ^( IMPORT IDENT )
                    {
                        CommonTree root_1 = (CommonTree) adaptor.nil();
                        root_1 = (CommonTree) adaptor.becomeRoot((CommonTree) adaptor.create(IMPORT, "IMPORT"), root_1);

                        adaptor.addChild(root_1, stream_IDENT.nextNode());

                        adaptor.addChild(root_0, root_1);
                    }

                }

                retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree) adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re)
        {
            reportError(re);
            recover(input, re);
            retval.tree = (CommonTree) adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally
        {
        }
        return retval;
    }
    // $ANTLR end "importRule"

    public static class nested_return extends ParserRuleReturnScope
    {
        CommonTree tree;

        public Object getTree() { return tree; }
    }

    ;

    // $ANTLR start "nested"
    // /home/langera/dev/freud/src/grammar/Css.g:48:1: nested : '@' nest '{' ( properties )? ( nested )* '}' -> ^( NESTED nest ( properties )* ( nested )* ) ;

    public final CssParser.nested_return nested() throws RecognitionException
    {
        CssParser.nested_return retval = new CssParser.nested_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token char_literal7 = null;
        Token char_literal9 = null;
        Token char_literal12 = null;
        CssParser.nest_return nest8 = null;

        CssParser.properties_return properties10 = null;

        CssParser.nested_return nested11 = null;


        CommonTree char_literal7_tree = null;
        CommonTree char_literal9_tree = null;
        CommonTree char_literal12_tree = null;
        RewriteRuleTokenStream stream_30 = new RewriteRuleTokenStream(adaptor, "token 30");
        RewriteRuleTokenStream stream_28 = new RewriteRuleTokenStream(adaptor, "token 28");
        RewriteRuleTokenStream stream_29 = new RewriteRuleTokenStream(adaptor, "token 29");
        RewriteRuleSubtreeStream stream_nested = new RewriteRuleSubtreeStream(adaptor, "rule nested");
        RewriteRuleSubtreeStream stream_nest = new RewriteRuleSubtreeStream(adaptor, "rule nest");
        RewriteRuleSubtreeStream stream_properties = new RewriteRuleSubtreeStream(adaptor, "rule properties");
        try
        {
            // /home/langera/dev/freud/src/grammar/Css.g:49:3: ( '@' nest '{' ( properties )? ( nested )* '}' -> ^( NESTED nest ( properties )* ( nested )* ) )
            // /home/langera/dev/freud/src/grammar/Css.g:49:5: '@' nest '{' ( properties )? ( nested )* '}'
            {
                char_literal7 = (Token) match(input, 28, FOLLOW_28_in_nested183);
                stream_28.add(char_literal7);

                pushFollow(FOLLOW_nest_in_nested185);
                nest8 = nest();

                state._fsp--;

                stream_nest.add(nest8.getTree());
                char_literal9 = (Token) match(input, 29, FOLLOW_29_in_nested187);
                stream_29.add(char_literal9);

                // /home/langera/dev/freud/src/grammar/Css.g:49:18: ( properties )?
                int alt4 = 2;
                int LA4_0 = input.LA(1);

                if ((LA4_0 == IDENT))
                {
                    alt4 = 1;
                }
                switch (alt4)
                {
                    case 1:
                        // /home/langera/dev/freud/src/grammar/Css.g:49:18: properties
                    {
                        pushFollow(FOLLOW_properties_in_nested189);
                        properties10 = properties();

                        state._fsp--;

                        stream_properties.add(properties10.getTree());

                    }
                    break;

                }

                // /home/langera/dev/freud/src/grammar/Css.g:49:30: ( nested )*
                loop5:
                do
                {
                    int alt5 = 2;
                    int LA5_0 = input.LA(1);

                    if ((LA5_0 == 28))
                    {
                        alt5 = 1;
                    }


                    switch (alt5)
                    {
                        case 1:
                            // /home/langera/dev/freud/src/grammar/Css.g:49:30: nested
                        {
                            pushFollow(FOLLOW_nested_in_nested192);
                            nested11 = nested();

                            state._fsp--;

                            stream_nested.add(nested11.getTree());

                        }
                        break;

                        default:
                            break loop5;
                    }
                }
                while (true);

                char_literal12 = (Token) match(input, 30, FOLLOW_30_in_nested195);
                stream_30.add(char_literal12);


                // AST REWRITE
                // elements: nested, nest, properties
                // token labels:
                // rule labels: retval
                // token list labels:
                // rule list labels:
                // wildcard labels:
                retval.tree = root_0;
                RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval != null ? retval.tree : null);

                root_0 = (CommonTree) adaptor.nil();
                // 49:42: -> ^( NESTED nest ( properties )* ( nested )* )
                {
                    // /home/langera/dev/freud/src/grammar/Css.g:49:45: ^( NESTED nest ( properties )* ( nested )* )
                    {
                        CommonTree root_1 = (CommonTree) adaptor.nil();
                        root_1 = (CommonTree) adaptor.becomeRoot((CommonTree) adaptor.create(NESTED, "NESTED"), root_1);

                        adaptor.addChild(root_1, stream_nest.nextTree());
                        // /home/langera/dev/freud/src/grammar/Css.g:49:60: ( properties )*
                        while (stream_properties.hasNext())
                        {
                            adaptor.addChild(root_1, stream_properties.nextTree());

                        }
                        stream_properties.reset();
                        // /home/langera/dev/freud/src/grammar/Css.g:49:72: ( nested )*
                        while (stream_nested.hasNext())
                        {
                            adaptor.addChild(root_1, stream_nested.nextTree());

                        }
                        stream_nested.reset();

                        adaptor.addChild(root_0, root_1);
                    }

                }

                retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree) adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re)
        {
            reportError(re);
            recover(input, re);
            retval.tree = (CommonTree) adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally
        {
        }
        return retval;
    }
    // $ANTLR end "nested"

    public static class nest_return extends ParserRuleReturnScope
    {
        CommonTree tree;

        public Object getTree() { return tree; }
    }

    ;

    // $ANTLR start "nest"
    // /home/langera/dev/freud/src/grammar/Css.g:52:1: nest : IDENT ( IDENT )* ( pseudo )* -> ^( NEST IDENT ( IDENT )* ( pseudo )* ) ;

    public final CssParser.nest_return nest() throws RecognitionException
    {
        CssParser.nest_return retval = new CssParser.nest_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token IDENT13 = null;
        Token IDENT14 = null;
        CssParser.pseudo_return pseudo15 = null;


        CommonTree IDENT13_tree = null;
        CommonTree IDENT14_tree = null;
        RewriteRuleTokenStream stream_IDENT = new RewriteRuleTokenStream(adaptor, "token IDENT");
        RewriteRuleSubtreeStream stream_pseudo = new RewriteRuleSubtreeStream(adaptor, "rule pseudo");
        try
        {
            // /home/langera/dev/freud/src/grammar/Css.g:53:2: ( IDENT ( IDENT )* ( pseudo )* -> ^( NEST IDENT ( IDENT )* ( pseudo )* ) )
            // /home/langera/dev/freud/src/grammar/Css.g:53:4: IDENT ( IDENT )* ( pseudo )*
            {
                IDENT13 = (Token) match(input, IDENT, FOLLOW_IDENT_in_nest222);
                stream_IDENT.add(IDENT13);

                // /home/langera/dev/freud/src/grammar/Css.g:53:10: ( IDENT )*
                loop6:
                do
                {
                    int alt6 = 2;
                    int LA6_0 = input.LA(1);

                    if ((LA6_0 == IDENT))
                    {
                        alt6 = 1;
                    }


                    switch (alt6)
                    {
                        case 1:
                            // /home/langera/dev/freud/src/grammar/Css.g:53:10: IDENT
                        {
                            IDENT14 = (Token) match(input, IDENT, FOLLOW_IDENT_in_nest224);
                            stream_IDENT.add(IDENT14);


                        }
                        break;

                        default:
                            break loop6;
                    }
                }
                while (true);

                // /home/langera/dev/freud/src/grammar/Css.g:53:17: ( pseudo )*
                loop7:
                do
                {
                    int alt7 = 2;
                    int LA7_0 = input.LA(1);

                    if (((LA7_0 >= 38 && LA7_0 <= 39)))
                    {
                        alt7 = 1;
                    }


                    switch (alt7)
                    {
                        case 1:
                            // /home/langera/dev/freud/src/grammar/Css.g:53:17: pseudo
                        {
                            pushFollow(FOLLOW_pseudo_in_nest227);
                            pseudo15 = pseudo();

                            state._fsp--;

                            stream_pseudo.add(pseudo15.getTree());

                        }
                        break;

                        default:
                            break loop7;
                    }
                }
                while (true);


                // AST REWRITE
                // elements: pseudo, IDENT, IDENT
                // token labels:
                // rule labels: retval
                // token list labels:
                // rule list labels:
                // wildcard labels:
                retval.tree = root_0;
                RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval != null ? retval.tree : null);

                root_0 = (CommonTree) adaptor.nil();
                // 53:25: -> ^( NEST IDENT ( IDENT )* ( pseudo )* )
                {
                    // /home/langera/dev/freud/src/grammar/Css.g:53:28: ^( NEST IDENT ( IDENT )* ( pseudo )* )
                    {
                        CommonTree root_1 = (CommonTree) adaptor.nil();
                        root_1 = (CommonTree) adaptor.becomeRoot((CommonTree) adaptor.create(NEST, "NEST"), root_1);

                        adaptor.addChild(root_1, stream_IDENT.nextNode());
                        // /home/langera/dev/freud/src/grammar/Css.g:53:42: ( IDENT )*
                        while (stream_IDENT.hasNext())
                        {
                            adaptor.addChild(root_1, stream_IDENT.nextNode());

                        }
                        stream_IDENT.reset();
                        // /home/langera/dev/freud/src/grammar/Css.g:53:49: ( pseudo )*
                        while (stream_pseudo.hasNext())
                        {
                            adaptor.addChild(root_1, stream_pseudo.nextTree());

                        }
                        stream_pseudo.reset();

                        adaptor.addChild(root_0, root_1);
                    }

                }

                retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree) adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re)
        {
            reportError(re);
            recover(input, re);
            retval.tree = (CommonTree) adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally
        {
        }
        return retval;
    }
    // $ANTLR end "nest"

    public static class ruleset_return extends ParserRuleReturnScope
    {
        CommonTree tree;

        public Object getTree() { return tree; }
    }

    ;

    // $ANTLR start "ruleset"
    // /home/langera/dev/freud/src/grammar/Css.g:56:1: ruleset : selectors '{' ( properties )? '}' -> ^( RULE selectors ( properties )* ) ;

    public final CssParser.ruleset_return ruleset() throws RecognitionException
    {
        CssParser.ruleset_return retval = new CssParser.ruleset_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token char_literal17 = null;
        Token char_literal19 = null;
        CssParser.selectors_return selectors16 = null;

        CssParser.properties_return properties18 = null;


        CommonTree char_literal17_tree = null;
        CommonTree char_literal19_tree = null;
        RewriteRuleTokenStream stream_30 = new RewriteRuleTokenStream(adaptor, "token 30");
        RewriteRuleTokenStream stream_29 = new RewriteRuleTokenStream(adaptor, "token 29");
        RewriteRuleSubtreeStream stream_selectors = new RewriteRuleSubtreeStream(adaptor, "rule selectors");
        RewriteRuleSubtreeStream stream_properties = new RewriteRuleSubtreeStream(adaptor, "rule properties");
        try
        {
            // /home/langera/dev/freud/src/grammar/Css.g:57:3: ( selectors '{' ( properties )? '}' -> ^( RULE selectors ( properties )* ) )
            // /home/langera/dev/freud/src/grammar/Css.g:57:5: selectors '{' ( properties )? '}'
            {
                pushFollow(FOLLOW_selectors_in_ruleset257);
                selectors16 = selectors();

                state._fsp--;

                stream_selectors.add(selectors16.getTree());
                char_literal17 = (Token) match(input, 29, FOLLOW_29_in_ruleset259);
                stream_29.add(char_literal17);

                // /home/langera/dev/freud/src/grammar/Css.g:57:19: ( properties )?
                int alt8 = 2;
                int LA8_0 = input.LA(1);

                if ((LA8_0 == IDENT))
                {
                    alt8 = 1;
                }
                switch (alt8)
                {
                    case 1:
                        // /home/langera/dev/freud/src/grammar/Css.g:57:19: properties
                    {
                        pushFollow(FOLLOW_properties_in_ruleset261);
                        properties18 = properties();

                        state._fsp--;

                        stream_properties.add(properties18.getTree());

                    }
                    break;

                }

                char_literal19 = (Token) match(input, 30, FOLLOW_30_in_ruleset264);
                stream_30.add(char_literal19);


                // AST REWRITE
                // elements: selectors, properties
                // token labels:
                // rule labels: retval
                // token list labels:
                // rule list labels:
                // wildcard labels:
                retval.tree = root_0;
                RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval != null ? retval.tree : null);

                root_0 = (CommonTree) adaptor.nil();
                // 57:35: -> ^( RULE selectors ( properties )* )
                {
                    // /home/langera/dev/freud/src/grammar/Css.g:57:38: ^( RULE selectors ( properties )* )
                    {
                        CommonTree root_1 = (CommonTree) adaptor.nil();
                        root_1 = (CommonTree) adaptor.becomeRoot((CommonTree) adaptor.create(RULE, "RULE"), root_1);

                        adaptor.addChild(root_1, stream_selectors.nextTree());
                        // /home/langera/dev/freud/src/grammar/Css.g:57:56: ( properties )*
                        while (stream_properties.hasNext())
                        {
                            adaptor.addChild(root_1, stream_properties.nextTree());

                        }
                        stream_properties.reset();

                        adaptor.addChild(root_0, root_1);
                    }

                }

                retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree) adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re)
        {
            reportError(re);
            recover(input, re);
            retval.tree = (CommonTree) adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally
        {
        }
        return retval;
    }
    // $ANTLR end "ruleset"

    public static class selectors_return extends ParserRuleReturnScope
    {
        CommonTree tree;

        public Object getTree() { return tree; }
    }

    ;

    // $ANTLR start "selectors"
    // /home/langera/dev/freud/src/grammar/Css.g:60:1: selectors : selector ( ',' selector )* ;

    public final CssParser.selectors_return selectors() throws RecognitionException
    {
        CssParser.selectors_return retval = new CssParser.selectors_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token char_literal21 = null;
        CssParser.selector_return selector20 = null;

        CssParser.selector_return selector22 = null;


        CommonTree char_literal21_tree = null;

        try
        {
            // /home/langera/dev/freud/src/grammar/Css.g:61:2: ( selector ( ',' selector )* )
            // /home/langera/dev/freud/src/grammar/Css.g:61:4: selector ( ',' selector )*
            {
                root_0 = (CommonTree) adaptor.nil();

                pushFollow(FOLLOW_selector_in_selectors289);
                selector20 = selector();

                state._fsp--;

                adaptor.addChild(root_0, selector20.getTree());
                // /home/langera/dev/freud/src/grammar/Css.g:61:13: ( ',' selector )*
                loop9:
                do
                {
                    int alt9 = 2;
                    int LA9_0 = input.LA(1);

                    if ((LA9_0 == 31))
                    {
                        alt9 = 1;
                    }


                    switch (alt9)
                    {
                        case 1:
                            // /home/langera/dev/freud/src/grammar/Css.g:61:14: ',' selector
                        {
                            char_literal21 = (Token) match(input, 31, FOLLOW_31_in_selectors292);
                            char_literal21_tree = (CommonTree) adaptor.create(char_literal21);
                            adaptor.addChild(root_0, char_literal21_tree);

                            pushFollow(FOLLOW_selector_in_selectors294);
                            selector22 = selector();

                            state._fsp--;

                            adaptor.addChild(root_0, selector22.getTree());

                        }
                        break;

                        default:
                            break loop9;
                    }
                }
                while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree) adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re)
        {
            reportError(re);
            recover(input, re);
            retval.tree = (CommonTree) adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally
        {
        }
        return retval;
    }
    // $ANTLR end "selectors"

    public static class selector_return extends ParserRuleReturnScope
    {
        CommonTree tree;

        public Object getTree() { return tree; }
    }

    ;

    // $ANTLR start "selector"
    // /home/langera/dev/freud/src/grammar/Css.g:64:1: selector : elem ( selectorOperation )* ( attrib )* ( pseudo )? -> elem ( selectorOperation )* ( attrib )* ( pseudo )* ;

    public final CssParser.selector_return selector() throws RecognitionException
    {
        CssParser.selector_return retval = new CssParser.selector_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        CssParser.elem_return elem23 = null;

        CssParser.selectorOperation_return selectorOperation24 = null;

        CssParser.attrib_return attrib25 = null;

        CssParser.pseudo_return pseudo26 = null;


        RewriteRuleSubtreeStream stream_elem = new RewriteRuleSubtreeStream(adaptor, "rule elem");
        RewriteRuleSubtreeStream stream_pseudo = new RewriteRuleSubtreeStream(adaptor, "rule pseudo");
        RewriteRuleSubtreeStream stream_selectorOperation = new RewriteRuleSubtreeStream(adaptor, "rule selectorOperation");
        RewriteRuleSubtreeStream stream_attrib = new RewriteRuleSubtreeStream(adaptor, "rule attrib");
        try
        {
            // /home/langera/dev/freud/src/grammar/Css.g:65:2: ( elem ( selectorOperation )* ( attrib )* ( pseudo )? -> elem ( selectorOperation )* ( attrib )* ( pseudo )* )
            // /home/langera/dev/freud/src/grammar/Css.g:65:4: elem ( selectorOperation )* ( attrib )* ( pseudo )?
            {
                pushFollow(FOLLOW_elem_in_selector308);
                elem23 = elem();

                state._fsp--;

                stream_elem.add(elem23.getTree());
                // /home/langera/dev/freud/src/grammar/Css.g:65:9: ( selectorOperation )*
                loop10:
                do
                {
                    int alt10 = 2;
                    alt10 = dfa10.predict(input);
                    switch (alt10)
                    {
                        case 1:
                            // /home/langera/dev/freud/src/grammar/Css.g:65:9: selectorOperation
                        {
                            pushFollow(FOLLOW_selectorOperation_in_selector310);
                            selectorOperation24 = selectorOperation();

                            state._fsp--;

                            stream_selectorOperation.add(selectorOperation24.getTree());

                        }
                        break;

                        default:
                            break loop10;
                    }
                }
                while (true);

                // /home/langera/dev/freud/src/grammar/Css.g:65:28: ( attrib )*
                loop11:
                do
                {
                    int alt11 = 2;
                    int LA11_0 = input.LA(1);

                    if ((LA11_0 == 40))
                    {
                        alt11 = 1;
                    }

